--- a/app/templates/admins/reservation_admin.html
+++ b/app/templates/admins/reservation_admin.html
@@ -3,13 +3,6 @@
 HIUSMAGIA parturi kampaamo
 {% endblock %}
 
-<!-- <?php
-$env = parse_ini_file('../.env');
-if (!isset($_SESSION['admin']) || $_SESSION['admin']!=1) {
-die;
-}
-?> -->
-
 {% block content %}
     <h2 class="custom-txt-center custom-margin-bottom-4">TERVETULOA ADMINISTRAATTORIN SIVULLE</h2>  
 
@@ -22,8 +15,8 @@ die;
             <div class="row">
                 <div class="col-md-4 order-md-2 mb-4">                
                     <ul class="list-group mb-3">
-                        <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
+                        <li class="list-group-item d-flex justify-content-between custom-bg-menu">
+                        <div class="custom-text-white">
                             <h6 class="my-0"><script>showToday();</script></h6>
                             <small>VIIKKO <?php echo date("W");?></small>
                         </div>                   
@@ -38,16 +31,23 @@ die;
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.admin_page') }}" class="text-danger">Muokaa ja poista palveluita</a></h6>
-                            <small class="text-muted">Muokaa aikatauluja tai poista palveluita</small>
+                            <h6 class="my-0"><a href="{{ url_for('main.admin_page') }}" class="custom-ins-link">Muokaa ja peruuta palveluita</a></h6>
+                            <small class="text-muted">Muokaa aikatauluja tai peruuta palveluita</small>
                         </div>                                                         
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.new_service') }}" class="text-danger">Lisää uusi palvelu</a></h6>
+                            <h6 class="my-0"><a href="{{ url_for('main.new_service') }}" class="custom-ins-link">Lisää uusi palvelu</a></h6>
                             <small class="text-muted">Lisää tietoa uudesta palvelusta aikatauluun</small>
                         </div>                    
+                        </li>
+
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0"><a href="{{ url_for('main.reservation_admin') }}" class="custom-ins-link">Näytä varaukset</a></h6>
+                                <small class="text-muted">Näytä asiakkaiden varaukset</small>
+                            </div>                    
                         </li>
 
                         <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
@@ -67,7 +67,7 @@ die;
                 </div>
                 
                 <div class="col-md-8 order-md-1">
-                    <h4 class="mb-4 text-success">VARAUKSET</h4>
+                    <h4 class="mb-4 text-success">ASIAKKAIDEN VARAUKSET</h4>
                     <form>
                         <!--Row starts-->
                         <div class="row">
@@ -91,59 +91,13 @@ die;
                                 <div class="form-group justify-content-center col-md-6 mb-4">
                                     <!--<label class="mr-4">Liikuntalaji</label>-->
                                     {{ form.service.label }}
-                                    {{ form.service(id="service", class="form-control mr-5") }}
-                                    <!--php starts-->
-                                    <!-- <?php
-                                    $titles = [];
-                                    $query = "SELECT title,id FROM workout_titles ORDER BY title";
-                                    $result = $connect->query($query);
-                                    if ($result->num_rows > 0) {
-                                        while ($row = $result->fetch_assoc()) {
-                                                $titles[$row['id']] = $row["title"];
-                                            }
-                                    }
-                                    ?> -->
-                                    <!--php ends-->
-
-                                    <!--options start-->
-                                    <!--<select id="title" class=form-control name="title">
-                                    <option value="">kaikki liikuntalajit</option>-->
-                                    <!-- <?php
-                                    foreach ($titles as $id => $title) {
-                                        echo "<option value=\"$id\">$title</option>";
-                                    }
-                                    ?>-->
-                                    <!--</select>-->
-                                    <!--options end-->                                                   
+                                    {{ form.service(id="service", class="form-control mr-5") }}                                                                                  
                                 </div>  
                                                         
                                 <div class="form-group justify-content-center col-md-6 mb-4">
                                     <!--<label class="mr-4">Ohjaaja</label>-->
                                     {{ form.hairdresser.label }}
-                                    {{ form.hairdresser(id="hairdresser", class="form-control mr-5") }}
-                                    <!--php starts-->
-                                    <!-- <?php
-                                    $titles = [];
-                                    $query = "SELECT `name`,id FROM users WHERE trainer='1' ORDER BY `name`";
-                                    $result = $connect->query($query);
-                                    if ($result->num_rows > 0) {
-                                        while ($row = $result->fetch_assoc()) {
-                                            $trainers[$row['id']] = $row["name"];
-                                        }
-                                    }
-                                    ?> -->
-                                    <!--php ends-->
-
-                                    <!--options start-->
-                                    <!--<select id="trainer" class=form-control name="trainer" >
-                                    <option value="">kaikki ohjaajat</option>-->
-                                    <!-- <?php
-                                        foreach ($trainers as $id => $trainer) {
-                                            echo "<option value=\"$id\">$trainer</option>";
-                                        }
-                                    ?>-->
-                                    <!--</select>-->
-                                    <!--options end-->                     
+                                    {{ form.hairdresser(id="hairdresser", class="form-control mr-5") }}                                                        
                                 </div>
                             
                                 <!--<div class="form-group justify-content-center col-md-12 mb-4">
