--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -12,7 +12,7 @@
         <div class="col-lg-8">
             
             <form class="custom-form" action="" method="post">
-                <h2>VAIHDA SÄHKÖPOSTI</h2>               
+                <h2 style="text-align: center;">VAIHDA SÄHKÖPOSTI</h2>               
 
                 <div class="form-group">                    
                     {{ form.email.label }}                    
