--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -13,7 +13,7 @@
         <div class="col-lg-8">            
             
             <form class="custom-form" action="" method="post">
-                <h2>VAIHDA SALASANA</h2>
+                <h2 style="text-align: center;">VAIHDA SALASANA</h2>
 
                 <div class="form-group">                    
                     {{ form.old_password.label }}                    
