--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -16,8 +16,8 @@ HIUSMAGIA parturi kampaamo
             <div class="row">
                 <div class="col-md-4 order-md-2 mb-4">                
                     <ul class="list-group mb-3">
-                        <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
+                        <li class="list-group-item d-flex justify-content-between custom-bg-menu">
+                        <div class="custom-text-white">
                             <h6 class="my-0"><script>showToday();</script></h6>
                             <small>VIIKKO <?php echo date("W");?></small>
                         </div>                   
@@ -31,14 +31,14 @@ HIUSMAGIA parturi kampaamo
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.client_page') }}"  class="text-danger">Minun aikatauluni</a></h6>
-                            <small class="text-muted">Tarkista aikataulusi valitsemasi ajanjaksolla</small>
+                            <h6 class="my-0"><a href="{{ url_for('main.client_page') }}"  class="custom-ins-link">Minun aikatauluni</a></h6>
+                            <small class="text-muted">Tarkista aikataulusi ja peruuta aikoja</small>
                         </div>                                                         
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.reservation') }}" class="text-danger">Varaa aika</a></h6>
+                            <h6 class="my-0"><a href="{{ url_for('main.reservation') }}" class="custom-ins-link">Varaa aika</a></h6>
                             <small class="text-muted">Varaa ajka valitsemasi osaajalle</small>
                         </div>                    
                         </li>                                     
@@ -46,7 +46,7 @@ HIUSMAGIA parturi kampaamo
                 </div>
                 
                 <div class="col-md-8 order-md-1">
-                    <h4 class="mb-4 text-success">MINUN AIKATAULUNI</h4>
+                    <h4 class="mb-4 text-success">MINUN AIKATAULUNI JA AIKOJEN PERUUTTAMINEN</h4>
                     <form>
                         <!--Row starts-->
                         <div class="row">
