--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,52 @@
 HIUSMAGIA parturi kampaamo
 {% endblock %}
 {% block content %}
+    {% if current_user.is_authenticated %}
+        <div class="custom-welcome">
+        {% if current_user.admin != 1 %}
+            <h2>
+            Hyvä {% if current_user.is_authenticated %}<span style="text-transform:uppercase;">{{ current_user.username }}</span>{% else %}Stranger{% endif %}, tervetuloa HIUSMAGIAAN!
+            </h2>            
+            <!--Row starts-->
+            <div class="row">
+                <div class="col-xl-2"></div>
+                <div class="col-xl-4">
+                    <p><a href="{{ url_for('main.client_page') }}" class="btn btn-block mt-0 custom-green-buy">SELAA AIKATAULUJA JA PERUUTA AIKOJA</a></p>
+                </div> 
+                <div class="col-xl-4">
+                    <p><a href="{{ url_for('main.reservation') }}" class="btn btn-block mt-0 custom-green-buy">VARAA AJKA MEIDÄN OSAAJILLE</a></p>
+                </div>                               
+                <div class="col-xl-2"></div>                
+            </div> 
+            <!--Row ends-->            
+        
+        {% elif current_user.admin == 1 %}
+            <h2>
+            Administraattori {% if current_user.is_authenticated %}<span style="text-transform:uppercase;">{{ current_user.username }}</span>{% else %}Stranger{% endif %}, tervetuloa HIUSMAGIAAN!
+            </h2>           
+            <!--Row starts-->
+            <div class="row">
+                <div class="col-xl-2"></div>
+                <div class="col-xl-2">
+                    <p><a href="{{ url_for('main.admin_page') }}" class="btn btn-block mt-0 custom-green-buy">SELAA PALVELUITA</a></p>
+                </div>
+                <div class="col-xl-2">
+                    <p><a href="{{ url_for('main.new_service') }}" class="btn btn-block mt-0 custom-green-buy">LISÄÄ UUSI PALVELU</a></p>
+                </div>  
+                <div class="col-xl-2">
+                    <p><a href="{{ url_for('main.admin_page') }}" class="btn btn-block mt-0 custom-green-buy">MUOKAA PALVELU</a></p>
+                </div>
+                <div class="col-xl-2">
+                    <p><a href="{{ url_for('main.reservation_admin') }}" class="btn btn-block mt-0 custom-green-buy">NÄYTÄ VARAUKSET</a></p>
+                </div>               
+                <div class="col-xl-2"></div>                
+            </div> 
+            <!--Row ends-->            
+        {% endif %}
+        </div>
+        <p></p>
+    {% endif %}     
+
     <div class="custom-adds">
         <div class="row">
         <div class="col-xl-12 custom-txt-center">
@@ -22,7 +68,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Shampoot</div></div>
-                <div class="col-xl-5 custom-cart-title-r" ><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r" ><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
@@ -39,7 +85,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hoitoaineet</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.15€</h3></div>
@@ -59,7 +105,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Muotoilutuotteet</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.30€</h3></div> 
@@ -74,7 +120,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hiusvärit</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.25€</h3></div>
@@ -94,7 +140,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Permanenttiaineet</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
@@ -109,7 +155,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-xl-6">
             <div class="row">
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Tarvikkeet</div></div>
-                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">TUOTELUETTELOON</a></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
             <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.10€</h3></div> 
@@ -122,7 +168,7 @@ HIUSMAGIA parturi kampaamo
             </div>                    
         </div>  
     </div>
-    <!--Row ends-->      
+    <!--Row ends-->        
 {% endblock %}
 
 <script type="text/javascript" src="cart/put_product_cart.js"></script>
