--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,37 +1,3 @@
-<!--
-<?php
-require(__DIR__ . '/forms/db_connection.php');
-$env = parse_ini_file('.env');
-$page = $_SERVER['PHP_SELF'];
-$end = substr($page, strrpos($page, "/") + 1);
-$address = substr($end, 0, strpos($end, "."));
-$active = "class=\"nav-link active\" ";
-$full = "class=\"custom-cart-full\" ";
-session_start();
-if (isset($_COOKIE['user_id'])) {
-  $user_id = $_COOKIE['user_id'];
-  $query = " SELECT * FROM users LEFT JOIN users_tokens ON users.id=users_tokens.user_id  WHERE users.id='$user_id'";
-  $result = $connect->query($query);
-  if ($result->num_rows > 0) {
-    $row = $result->fetch_assoc();
-    $token_cookie = $row['token_cookie'];
-    $author = password_verify($_COOKIE['token_cookie'], $token_cookie);
-    if ($author) {
-      $_SESSION['loggedIn'] = TRUE;
-      $_SESSION['user_id'] = $_COOKIE['user_id'];
-      $_SESSION['admin'] = $row['admin'];
-      $_SESSION['trainer'] = $row['trainer'];
-      $_SESSION['last_activity'] = time();
-    }
-  }
-} elseif (isset($_SESSION['last_activity']) && (time() - $_SESSION['last_activity'] > 1200)) {
-  session_unset();
-  session_destroy();
-} else {
-  $_SESSION['last_activity'] = time();
-}
-?>-->
-
 <!DOCTYPE html>
 
   <head>
@@ -83,20 +49,21 @@ if (isset($_COOKIE['user_id'])) {
             </a>
           </div>
             
-          <div class="navbar-nav">                   
+          <div class="navbar-nav">
+            {% if current_user.admin == 1 %}
             <a href="{{ url_for('main.admin_page') }}" class="nav-item nav-link">
-              <i class="bi bi-person-circle" style="font-size:18px; color:#FBEFE1;"></i>
-            </a>                       
-            
+              <i class="bi bi-person-circle" style="font-size:18px; color:#99cc99;"></i>
+            </a>
+            {% endif %}
+
             {% if current_user.is_authenticated %}  
-            <a  href="cart/cart.html" 
-              class="nav-item nav-link"><i class="bi bi-cart"></i>
-              <!--class="nav-item custom-cart-link"><i class="bi bi-cart"></i>-->
-            </a>           
-            
+            <!--<a  href="cart/cart.html" 
+              class="nav-item custom-cart-link"><i class="bi bi-cart"></i>
+            </a>-->           
+            {% if current_user.admin != 1 %}
             <div class="nav-item dropdown">
               <a href="{{ url_for('main.client_page') }}" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
-                <i class="bi bi-person-circle" style="font-size:18px; color:#DAF7A6;"></i>
+                <i class="bi bi-person-circle" style="font-size:18px; color:#99cc99;"></i>
               </a>
               <div class="dropdown-menu"> 
                   <a href="{{ url_for('main.client_page') }}" class="dropdown-item">Minun aikatauluni</a>
@@ -105,11 +72,11 @@ if (isset($_COOKIE['user_id'])) {
                   <a href="{{ url_for('auth.change_email_request') }}" class="dropdown-item">Vaihda sähköposti</a>                  
               </div>
             </div>
-            
+            {% endif %}
             <a  
                 href="{{ url_for('auth.logout') }}" 
                 class="nav-item nav-link">Kirjaudu ulos
-            </a>            
+            </a>
 
             {% else %}              
 
@@ -156,7 +123,7 @@ if (isset($_COOKIE['user_id'])) {
     <footer class="custom-footer">
       <div class="container-fluid">
           <div class="custom-padding">
-              <p class="text-light">Copyright &copy; 2020-<?php echo date("Y");?> HIUSMAGIA parturi-kampaamo</p> 
+              <p class="text-light">Copyright &copy; 2021 HIUSMAGIA</p> 
           </div>   
       </div>
     </footer>
